# squirrel-gun

./: .gitignore  AGENT.MD  README.md  deploy.sh  deploy_scratch.sh  mount.sh  retrieve.sh
coral/: README.md  coral_run.py  export_tflite.py  train_detector_tf.py  train_tf.py
data/: squirrel.yaml
dataset/: bboxes.txt
image_extractor/: .gitignore  bbox_viewer.py  convert_bboxes_letterbox.py  delete_green_boxes.py  extract_frames.py  main.py  pyproject.toml  trim_images.py
model_maker_2/: README.md  bboxes_resolved.txt  bboxes_resolved.txt.bak  best_full_integer_quant_edgetpu.tflite  check_positives.py  dupefinder.py  export_edgetpu_remote.py  main.py  pyproject.toml  run_analysis.py  settings.conf  yolo_bbox_detector.py
scratch/: .gitignore  annotate_bbox.py  download_squirrel_yolo.py  fo_export_to_yolo.py  pyproject.toml  sq_main.py  squirrel.yaml  train_squirrel.py  train_squirrel_lite.py
scratch_py/: main.py  pyproject.toml  sq_main.py
squirrel-daemon/: aim_model.py  aiming.py  app.py  best_full_integer_quant_edgetpu.tflite  best_full_integer_quant_edgetpu_old.tflite  configure.sh  db.py  event_bus.py  laser_dot_detector.py  pyproject.toml  run.sh
squirrel-daemon/event_detection/: __init__.py  base.py  motion.py  yolo.py
squirrel-daemon/hardware-controllers/: pan-tilt-controller.py
squirrel-daemon/hardware_controllers/: GpioFactory.py  KernelPwmServo.py  LaserController.py  MqttClient.py  PanTiltController.py  ValveController.py  WaterController.py  WebcamController.py
squirrel-daemon/static/: styles.css
squirrel-daemon/templates/: MotionZone.html  PanTiltControl.html  Recordings.html  Snapshots.html
tflitecompiler/: .gitignore  Dockerfile  app.py  build-tar.sh  entrypoint.sh
train_laser/: aiming.py
(+22 files in other folders)
