[project]
name = "model-maker-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagehash>=4.3.2",
    "open-clip-torch>=3.1.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "requests>=2.34.0",
    "scikit-image>=0.25.2",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.202",
    "websocket-client>=1.9.0",
]
