[project]
name = "squirrel-daemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.2",
    "opencv-python==4.7.0.72",
    "paho-mqtt>=2.1.0",
    "gpiozero>=2.0.1",
    "scikit-learn>=1.5.1",
    "numpy<2",
    "pycoral==2.0.0",
    "pyturbojpeg>=1.8.2",
    "tflite-runtime==2.5.0.post1",
    "ultralytics==8.3.201",
    "lgpio>=0.2.2.0",
]
python = "3.9"
[tool.uv]
extra-index-url = ["https://google-coral.github.io/py-repo/"]

#coral = { url = "https://google-coral.github.io/py-repo/" }
